@startuml

title __USER's Class Diagram__\n

  namespace com.app.estation {
    namespace dto {
      namespace User {
        class com.app.estation.dto.User.PompeUserDto {
            - dateDebut : LocalDateTime
            - dateFin : LocalDateTime
            - idPompeUser : Long
            - releve : boolean
            + PompeUserDto()
            + PompeUserDto()
            + getDateDebut()
            + getDateFin()
            + getIdPompeUser()
            + getPompe()
            + getUser()
            + isReleve()
            + setDateDebut()
            + setDateFin()
            + setIdPompeUser()
            + setPompe()
            + setReleve()
            + setUser()
            + toString()
        }
      }
    }
  }
  

  namespace com.app.estation {
    namespace dto {
      namespace User {
        class com.app.estation.dto.User.StationUserDto {
            - date_debut : LocalDateTime
            - date_fin : LocalDateTime
            - idStationUser : Long
            + StationUserDto()
            + StationUserDto()
            + getDate_debut()
            + getDate_fin()
            + getIdStationUser()
            + getStation()
            + getUser()
            + setDate_debut()
            + setDate_fin()
            + setIdStationUser()
            + setStation()
            + setUser()
        }
      }
    }
  }
  

  namespace com.app.estation {
    namespace dto {
      namespace User {
        class com.app.estation.dto.User.StationUserKeyDto {
            ~ id_station : Long
            ~ id_user : Long
            + StationUserKeyDto()
            + StationUserKeyDto()
            + getId_station()
            + getId_user()
            + setId_station()
            + setId_user()
            + toString()
        }
      }
    }
  }
  

  namespace com.app.estation {
    namespace dto {
      namespace User {
        class com.app.estation.dto.User.UserDto {
            - email : String
            - id_user : Long
            - matricule : String
            - nom : String
            - pompes : List<PompeUserDto>
            - prenom : String
            - stations : List<StationUserDto>
            + UserDto()
            + UserDto()
            + UserDto()
            + getEmail()
            + getId_user()
            + getMatricule()
            + getNom()
            + getPompes()
            + getPrenom()
            + getProfile()
            + getStations()
            + setEmail()
            + setId_user()
            + setMatricule()
            + setNom()
            + setPompes()
            + setPrenom()
            + setProfile()
            + setStations()
        }
      }
    }
  }
  

  namespace com.app.estation {
    namespace dto {
      namespace User {
        class com.app.estation.dto.User.UserPassDto {
            - email : String
            - id_user : Long
            - matricule : String
            - nom : String
            - password : String
            - prenom : String
            - profile : String
            + UserPassDto()
            + UserPassDto()
            + getEmail()
            + getId_user()
            + getMatricule()
            + getNom()
            + getPassword()
            + getPrenom()
            + getProfile()
            + setEmail()
            + setId_user()
            + setMatricule()
            + setNom()
            + setPassword()
            + setPrenom()
            + setProfile()
        }
      }
    }
  }
  

  com.app.estation.dto.User.PompeUserDto o-- com.app.estation.dto.PompeDto : pompe
  com.app.estation.dto.User.PompeUserDto o-- com.app.estation.dto.User.UserDto : user
  com.app.estation.dto.User.StationUserDto o-- com.app.estation.dto.StationDto : station
  com.app.estation.dto.User.StationUserDto o-- com.app.estation.dto.User.UserDto : user
  com.app.estation.dto.User.UserDto o-- com.app.estation.dto.ProfileDto : profile


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
